@@ -375,6 +375,18 @@
       <property name="visible">False</property>
     </object>
 
+    <object name="copy_item" meta_type="CMF Action" i18n:domain="opengever.core">
+      <property name="title" i18n:translate="">Copy Item</property>
+      <property name="description" i18n:translate="" />
+      <property name="url_expr">string:${globals_view/getCurrentObjectUrl}/copy_item</property>
+      <property name="icon_expr" />
+      <property name="available_expr">python:object.restrictedTraverse("@@plone_interface_info").provides('opengever.document.document.IDocumentSchema')</property>
+      <property name="permissions">
+        <element value="View" />
+      </property>
+      <property name="visible">True</property>
+    </object>
+
     <object name="copy" meta_type="CMF Action" i18n:domain="plone">
       <property name="title" i18n:translate="">Copy</property>
       <property name="description" i18n:translate="" />
